# latte

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.MD
.devcontainer/: devcontainer.json
include/latte/: log.h  overloaded.h  print_json.h  value.h
journal_log/: journal_logger.h  main.cc  null_logger.h  requester.h
src/: log.cc  print_json.cc  value.cc
